--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -33,6 +33,7 @@
     <link rel="import" href="/assets/templates/addUser.ejs">
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/bootstrap.css">
+    <link rel="stylesheet" href="/styles/custom.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
 
