--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -72,7 +72,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"> activityOverlord</a>
+          <a class="navbar-brand" href="/"> activityfdsdgsdfgsdfgOverlord</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
